[project]
# dynamic = ["version"]

name = "workit"
version = "0.1.0"
description = "A customizable async pipeline framework"
authors = [{ name = "Estelle Scifo" }]
license = { file = "LICENSE" }
readme = "README.md"

requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]

[tool.uv.dynamic]
version = {file = "__init__"}

[dependency-groups]
dev = [
    "uv-build>=0.8.17",
]
